k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workos-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workos-service
  template:
    metadata:
      labels:
        app: workos-service
    spec:
      containers:
        - name: workos-container
          image: iamarien/workos-repository:latest
          ports:
            - containerPort: 8080
