k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workos-service
spec:
  selector:
    app: workos-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
