k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workos-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: workos.corporate.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workos-service
                port:
                  number: 80
